syntax = "proto3";

package auth;

service CompanyService {
  rpc Create(CreateRequestCompany) returns (OtherResponseCompany) {}
  rpc GetAll(GetAllRequestCompany) returns (GetAllResponseCompany) {}
  rpc GetById(GetItemRequesCompany) returns (GetAllResponseCompany) {}
  rpc Update(UpdateRequestCompany) returns (OtherResponseCompany) {}
}

/*
*  Request
*/

message CreateRequestCompany {
  string name = 1;
  int32 minDeposit = 2;
  int32 maxDeposit = 3;
  int32 minWithdrawal = 4;
  int32 maxWithdrawal = 5;
  int32 maxCapacity = 6;
}

message GetAllRequestCompany {
  int32 page = 1;
}

message GetItemRequesCompany {
  string id = 1;
}

message UpdateRequestCompany {
  string id = 1;
  string name = 2;
  int32 minDeposit = 3;
  int32 maxDeposit = 4;
  int32 minWithdrawal = 5;
  int32 maxWithdrawal = 6;
  int32 maxCapacity = 7;
}

/*
    * response
*/
message OtherResponseCompany {
  DataCompany data = 1;
}

message GetAllResponseCompany {
  LinksCompany  links = 1;
  MetaCompany  meta = 2;
  repeated DataCompany  data = 3;
}

message LinksCompany {
  string self = 1;
  string next = 2;
  string prev = 3;
  string first = 4;
  string last = 5;
}

message MetaCompany {
  int32 totalCount = 1;
}
message DataCompany {
  string type = 1;
  AttributesCompany attributes = 2;
}

message AttributesCompany {
  string message = 1;
  Company company = 2;
}

message Company {
  string id = 1;
  string name = 2;
  int32 minDeposit = 3;
  int32 maxDeposit = 4;
  int32 minWithdrawal = 5;
  int32 maxWithdrawal = 6;
  int32 maxCapacity = 7;
}
